[gd_scene load_steps=9 format=3 uid="uid://ccsmwam3jipm0"]

[ext_resource type="Script" path="res://Scenes/Effects/bolas.gd" id="1_olftu"]
[ext_resource type="Texture2D" uid="uid://bi7gs117waanc" path="res://Art/bolas.png" id="2_cakd0"]
[ext_resource type="Texture2D" uid="uid://cbws5sq8x0lv8" path="res://Art/bolasHit.png" id="3_8nwi3"]

[sub_resource type="Curve2D" id="Curve2D_oij11"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 48, 0)
}
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_f4dv4"]
radius = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_vhqas"]
atlas = ExtResource("3_8nwi3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2myk"]
atlas = ExtResource("3_8nwi3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hcv17"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhqas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2myk")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Bolas" type="Node2D"]
script = ExtResource("1_olftu")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(3, 0)
curve = SubResource("Curve2D_oij11")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
rotates = false
loop = false

[node name="HitboxBolas" type="Area2D" parent="Path2D/PathFollow2D"]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/HitboxBolas"]
shape = SubResource("CircleShape2D_f4dv4")

[node name="BolasSprite" type="Sprite2D" parent="Path2D/PathFollow2D"]
texture_filter = 1
texture = ExtResource("2_cakd0")

[node name="SplashSprite" type="AnimatedSprite2D" parent="Path2D/PathFollow2D"]
visible = false
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_hcv17")

[connection signal="area_entered" from="Path2D/PathFollow2D/HitboxBolas" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Path2D/PathFollow2D/HitboxBolas" to="." method="_on_hitbox_body_entered"]
